# uct-core

./: .drone.yml  .drone.yml.sig  .gcloudignore  .gitignore  BUILD.bazel  Dockerfile-ein  Dockerfile-hermes  Dockerfile-rutgers-cm  Dockerfile-rutgers-nb  Dockerfile-rutgers-nk  Dockerfile-rutgers_cm  Dockerfile-rutgers_nb  Dockerfile-rutgers_nk  Dockerfile-spike  Dockerfile.njit  Gopkg.toml  README.md  WORKSPACE  docker-compose.yml  functions.go  glide.yaml  go.mod  go.sum  install-all  install-all.bat  model.go  protoc-install-windows-java.bat  protoc-install-windows.bat  uct-compose.yml  uct-stack.yml
cloudbuilder/cuny/: Dockerfile  cloudbuilder.yml
common/: coding.go  config.go  config.toml  model.bak  model.go  model.pb.go  model.pb_ffjson.go  model.proto  model_ffjson.go  model_test.go  modelpb_test.go  util_test.go  utils.go
common/conf/: BUILD.bazel  config.go  config.toml
common/copier/: copier.go
common/database/: BUILD.bazel  handler.go
common/diff/: equal.go  main.go  main_test.go
common/firestore/: courses.go  firestore.go  notification.go  section.go  subjects.go  subscription.go  university.go  util.go
common/freeze/: freeze.go
common/metrics/: BUILD.bazel  metrics.go
common/middleware/: BUILD.bazel  database.go  decorator.go  logging.go  negotiation.go
common/middleware/cache/: BUILD.bazel  cache.go  cache_test.go  policy_test.go  redis.go  redis_test.go
common/middleware/httperror/: error.go
common/middleware/trace/: trace.go
common/model/: BUILD.bazel  coding.go  diff.go  model.go  model.pb.go  model.pb_ffjson.go  model.proto  model.proto2  model_test.go  modelpb_test.go  protoc-install-unix.sh  sort.go  util_test.go  utils.go  validate.go  validate_test.go
common/notification/: BUILD.bazel  namespace.go
common/print/: main.go
common/proxy/: BUILD.bazel  proxy.go
common/publishing/: pub.go
common/redis/: BUILD.bazel  helper.go  helper_test.go
common/redis/harmony/: BUILD.bazel  daemon.go  daemon_test.go  sync.go  sync_test.go
common/redis/lock/: BUILD.bazel
common/tools/freeze/: BUILD.bazel  freeze.go
common/tools/uct-clean/: BUILD.bazel  main.go
common/tools/uct-diff/: BUILD.bazel  main.go  main_test.go
common/tools/uct-push/: BUILD.bazel  main.go
common/trace/: trace.go
common/try/: BUILD.bazel  try.go
common/uct-clean/: main.go
common/uct-diff/: main.go  main_test.go
common/uct-print/: main.go
db/: console.sql  main.go  main_test.go
docker/: docker-compose.yml
docker/cuny/: Dockerfile  Dockerfile.cuny
docker/ein/: Dockerfile  Dockerfile.ein
docker/hermes/: Dockerfile  Dockerfile.hermes
docker/julia/: Dockerfile  Dockerfile.julia
docker/njit/: Dockerfile  Dockerfile.njit
docker/rutgers/: Dockerfile  Dockerfile.rutgers
docker/rutgers-cm/: Dockerfile  Dockerfile.rutgers-cm
docker/rutgers-nb/: Dockerfile  Dockerfile.rutgers-nb
docker/rutgers-nk/: Dockerfile  Dockerfile.rutgers-nk
docker/spike/: Dockerfile  Dockerfile.spike
edward/: course.go  main.go  subscription.go
edward/client/: client.go  view.go
edward/cmd/: main.go
edward/store/: database.go
ein/: BUILD.bazel  ein.go  firestore.go  main.go  main_test.go  prepare.go  prepare_test.go  query.go  stats.go  stmt.go
ein/cli/: main.go
ein/database/: handler.go
faye/: BUILD.bazel  query.go
firebase/: .firebaserc  firebase.json
firebase/public/: index.html
gcm/: main.go
hermes/: BUILD.bazel  ack.go  cmds.redis  example-notification.json  fcm.go  firestore.go  main.go  provider.go  token.proto  universitycoursetracker.json
hermes/token/: token.pb.go  token.proto  token.sh
influxdb/: influx.go
jet/: BUILD.bazel  main.go  main_test.go
julia/: BUILD.bazel  main.go  main_test.go  process.go
julia/notifier/: BUILD.bazel  mock.go  notifier.go
julia/rutgers/: BUILD.bazel  processor.go  routines.go
julia/rutgers/topic/: BUILD.bazel  topic.go  topic_test.go
kubernetes/: promote.sh
kubernetes/cluster-config/: namespaces.yml
postgresql/: Dockerfile  console.sql
postgresql/migrations/: README.MD  migration_2.sql  migration_3.sql
redis/: helper.go  helper_test.go
redis/harmony/: daemon.go  sync.go  sync_test.go
redis/lock/: lock.go  options.go
redis/sync/: sync.go  sync_test.go
scrapers/cuny/: BUILD.bazel  cookie.go  cuny.go  cuny_test.go  main.go  main_test.go  metadata.go
scrapers/cuny/testdata/: test.sh
scrapers/njit/: BUILD.bazel  main.go  main_test.go  metadata.go  njit.go  njit_test.go  utils.go
scrapers/njit-new/: main.go  model.go
scrapers/njit-old/: main.go  main_test.go
scrapers/njit/cookie/: BUILD.bazel  cookie.go  cookie_test.go
scrapers/rutgers/: BUILD.bazel  README.md  get_university.go  main.go  main_test.go  metadata.go  rutgers.go  rutgers_test.go  utils._test.go  utils.go  utils_test.go
scrapers/rutgers-scraper/: main.go  main_test.go  metadata.go  rutgers.go
scrapers/rutgers/cli/: main.go
scrapers/rutgers/model/: model.go  model_ffjson.go  model_test.go
scripts/: njit.sh  rutgers.sh
scripts/influx/: main.go
servers/: error.go  middleware.go
servers/faye/: database.go  handlers.go  main.go
servers/spiegal/: database.go  handlers.go  main.go  main_test.go  middleware.go
servers/spike/: database.go  handlers.go  main.go
spike/: BUILD.bazel  api-test.postman.json  course.go  database.go  handlers.go  main.go  main_test.go  notification.go  section.go  static.go  subject.go  subscription.go  university.go  util.go  util_test.go
spike/cache/: cache.go  inmemory.go  policy.go  policy_test.go  redis.go  redis_test.go
spike/middleware/: BUILD.bazel  database.go  decorator.go  error.go  logging.go  middleware.go  negotiaition.go  trace.go
spike/middleware/cache/: BUILD.bazel  cache.go  policy.go  policy_test.go  redis.go  redis_test.go
spike/middleware/httperror/: BUILD.bazel  error.go
spike/middleware/trace/: BUILD.bazel  trace.go
spike/store/: BUILD.bazel  database.go
static/: privacy_policy.html
support/fluentd/: Dockerfile  docker-compose.yml  fluent.conf  (+1 more)
vt/: .dockerIgnore  .gitIgnore  Dockerfile  build.gradle  settings.gradle
(+244 files in other folders)
