load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "process.go",
    ],
    importpath = "github.com/tevjef/uct-core/julia",
    visibility = ["//visibility:private"],
    deps = [
        "//common/conf:go_default_library",
        "//common/metrics:go_default_library",
        "//common/model:go_default_library",
        "//common/notification:go_default_library",
        "//common/redis:go_default_library",
        "//julia/notifier:go_default_library",
        "//julia/rutgers:go_default_library",
        "//vendor/github.com/Sirupsen/logrus:go_default_library",
        "//vendor/github.com/lib/pq:go_default_library",
        "//vendor/github.com/pquerna/ffjson/ffjson:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
        "//vendor/gopkg.in/alecthomas/kingpin.v2:go_default_library",
    ],
)

go_binary(
    name = "julia",
    embed = [":go_default_library"],
    importpath = "github.com/tevjef/uct-core/julia",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
    importpath = "github.com/tevjef/uct-core/julia",
    deps = [
        "//common/model:go_default_library",
        "//julia/notifier:go_default_library",
        "//vendor/github.com/Sirupsen/logrus:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
