load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["config.go"],
    importpath = "github.com/tevjef/uct-backend/common/conf",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/BurntSushi/toml:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/kelseyhightower/envconfig:go_default_library",
        "//vendor/github.com/tevjef/go-runtime-metrics/expvar:go_default_library",
    ],
)
