load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "mock.go",
        "notifier.go",
    ],
    importpath = "github.com/tevjef/uct-backend/julia/notifier",
    visibility = ["//visibility:public"],
    deps = [
        "//common/model:go_default_library",
        "//vendor/github.com/Sirupsen/logrus:go_default_library",
        "//vendor/github.com/lib/pq:go_default_library",
    ],
)
