load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "processor.go",
        "routines.go",
    ],
    importpath = "github.com/tevjef/uct-backend/julia/rutgers",
    visibility = ["//visibility:public"],
    deps = [
        "//common/model:go_default_library",
        "//julia/rutgers/topic:go_default_library",
        "//vendor/github.com/Sirupsen/logrus:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
    ],
)
