load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "metadata.go",
        "rutgers.go",
    ],
    importpath = "github.com/tevjef/uct-backend/scrapers/rutgers",
    visibility = ["//visibility:private"],
    deps = [
        "//common/conf:go_default_library",
        "//common/model:go_default_library",
        "//common/try:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
        "//vendor/gopkg.in/alecthomas/kingpin.v2:go_default_library",
    ],
)

go_binary(
    name = "rutgers",
    embed = [":go_default_library"],
    importpath = "github.com/tevjef/uct-backend/scrapers/rutgers",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "main_test.go",
        "rutgers_test.go",
    ],
    embed = [":go_default_library"],
    importpath = "github.com/tevjef/uct-backend/scrapers/rutgers",
    deps = ["//vendor/github.com/stretchr/testify/assert:go_default_library"],
)
