load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "daemon.go",
        "sync.go",
    ],
    importpath = "github.com/tevjef/uct-core/common/redis/harmony",
    visibility = ["//visibility:public"],
    deps = [
        "//common/redis:go_default_library",
        "//common/redis/lock:go_default_library",
        "//common/try:go_default_library",
        "//vendor/github.com/Sirupsen/logrus:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/satori/go.uuid:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "daemon_test.go",
        "sync_test.go",
    ],
    embed = [":go_default_library"],
    importpath = "github.com/tevjef/uct-core/common/redis/harmony",
    deps = [
        "//common/conf:go_default_library",
        "//common/model:go_default_library",
        "//common/redis:go_default_library",
        "//vendor/github.com/Sirupsen/logrus:go_default_library",
        "//vendor/github.com/satori/go.uuid:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
    ],
)
