load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "lock.go",
        "options.go",
    ],
    importpath = "github.com/tevjef/uct-backend/common/redis/lock",
    visibility = ["//visibility:public"],
    deps = ["//vendor/gopkg.in/redis.v5:go_default_library"],
)
