load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/tevjef/uct-core/common/tools/uct-clean",
    visibility = ["//visibility:private"],
    deps = [
        "//common/model:go_default_library",
        "//vendor/github.com/Sirupsen/logrus:go_default_library",
        "//vendor/gopkg.in/alecthomas/kingpin.v2:go_default_library",
    ],
)

go_binary(
    name = "uct-clean",
    embed = [":go_default_library"],
    importpath = "github.com/tevjef/uct-core/common/tools/uct-clean",
    visibility = ["//visibility:public"],
)
