load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["topic.go"],
    importpath = "github.com/tevjef/uct-backend/julia/rutgers/topic",
    visibility = ["//visibility:public"],
    deps = [
        "//common/model:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["topic_test.go"],
    embed = [":go_default_library"],
    importpath = "github.com/tevjef/uct-backend/julia/rutgers/topic",
    deps = [
        "//common/model:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
    ],
)
