load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["cookie.go"],
    importpath = "github.com/tevjef/uct-backend/scrapers/njit/cookie",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/sirupsen/logrus:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["cookie_test.go"],
    embed = [":go_default_library"],
    importpath = "github.com/tevjef/uct-backend/scrapers/njit/cookie",
    deps = ["//vendor/github.com/sirupsen/logrus:go_default_library"],
)
