load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["error.go"],
    importpath = "github.com/tevjef/uct-core/spike/middleware/httperror",
    visibility = ["//visibility:public"],
    deps = [
        "//common/model:go_default_library",
        "//spike/middleware:go_default_library",
        "//vendor/github.com/gin-gonic/gin:go_default_library",
    ],
)
